feat: create notification-service and update spring to 4.0.3